# koala

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cpp  test.kol  wasm_main.cpp
.github/workflows/: build-and-test.yml  deploy-playground.yml  deploy.yml  release.yml
include/: AstPrinter.h  Driver.h  Lexer.h  Parser.h  Token.h  TokenType.h  Visitor.h
include/core/: Driver.h  Environment.h  Expr.h  Interpreter.h  Lexer.h  Parser.h  Stmt.h  Token.h  Visitor.h
include/error/: ErrorReporter.h  ParseError.h  ParserError.h  ReturnException.h  RuntimeError.h
include/types/: Callable.h  Environment.h  Expr.h  KoalaFunction.h  Stmt.h  Visitor.h
include/utils/: AstPrinter.h  Time.h
lsp/: CMakeLists.txt  main.cpp
lsp/include/: Logger.hpp  RequestHandler.hpp  Responder.hpp  Scanner.hpp
lsp/include/types/: LspMessage.hpp
lsp/src/: Logger.cpp  RequestHandler.cpp  Responder.cpp  Scanner.cpp
scripts/: build-native.sh  build-web.sh  build.sh  createAstClasses  createAstClasses.cpp  generate_examples.js  generateoutputs.sh  printAst  printAst.cpp  runtests.sh
site/: examples.js  index.html  koala.js  koala.wasm  script.js  styles.css
src/core/: Driver.cpp  Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp
src/error/: ErrorReporter.cpp
src/types/: Token.cpp
src/utils/: Driver.cpp  Lexer.cpp  Parser.cpp
tests/: basics.kol  combined.kol  control_flow.kol  expressions.kol  fibonacci.kol  functions.kol  ifelse.kol  loops.kol  recursiveFibonacci.kol  scope.kol  scoping.kol  variables.kol
